cmake_minimum_required(VERSION 3.13)
project(TP C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(tp1)
include_directories(tp2)
include_directories(tp3)
include_directories(tp4)
include_directories(tp5)
include_directories(tp7)
include_directories(tp8)
include_directories(tp8/chomp)

add_executable(TP
        tp1/prog/Rendu.LECUYER/affectation.c
        tp1/prog/Rendu.LECUYER/bonjour.c
        tp1/prog/Rendu.LECUYER/calculs_simples.c
        tp1/prog/Rendu.LECUYER/maths.c
        tp1/prog/Rendu.LECUYER/permutation.c
        tp1/prog/Rendu.LECUYER/random.c
        tp1/prog/affectation.c
        tp1/prog/bissextiles.c
        tp1/prog/bonjour.c
        tp1/prog/calculs_simples.c
        tp1/prog/maths.c
        tp1/prog/pair_impair.c
        tp1/prog/permutation.c
        tp1/prog/random.c
        tp2/Rendu.LECUYER/carre.c
        tp2/Rendu.LECUYER/decode.c
        tp2/Rendu.LECUYER/factorielle.c
        tp2/Rendu.LECUYER/harmonique.c
        tp2/Rendu.LECUYER/instructions_repetitives.c
        tp2/Rendu.LECUYER/ligne.c
        tp2/Rendu.LECUYER/min-max.c
        tp2/Rendu.LECUYER/pgcd.c
        "tp2/Rendu.LECUYER/puissance(1).c"
        "tp2/Rendu.LECUYER/puissance(2).c"
        tp2/Rendu.LECUYER/puissance.c
        "tp2/Rendu.LECUYER/rectangle(1).c"
        "tp2/Rendu.LECUYER/rectangle(2).c"
        tp2/Rendu.LECUYER/rectangle.c
        tp2/Rendu.LECUYER/second_degre.c
        tp2/Rendu.LECUYER/table_mult.c
        "tp2/Rendu.LECUYER/triangle(1).c"
        "tp2/Rendu.LECUYER/triangle(2).c"
        tp2/Rendu.LECUYER/triangle.c
        tp2/carre.c
        tp2/decode.c
        tp2/factorielle.c
        tp2/harmonique.c
        tp2/instructions_repetitives.c
        tp2/ligne.c
        tp2/min-max.c
        tp2/pgcd.c
        "tp2/puissance(1).c"
        "tp2/puissance(2).c"
        tp2/puissance.c
        "tp2/rectangle(1).c"
        "tp2/rectangle(2).c"
        tp2/rectangle.c
        "tp2/second_degre(1).c"
        "tp2/second_degre(2).c"
        tp2/second_degre.c
        "tp2/table_mult(1).c"
        "tp2/table_mult(2).c"
        tp2/table_mult.c
        "tp2/triangle(1).c"
        "tp2/triangle(2).c"
        tp2/triangle.c
        tp3/Rendu.LECUYER/nb_mystere_hguess.c
        tp3/Rendu.LECUYER/nb_mystere_mguess.c
        tp3/nb_mystere_hguess.c
        tp3/nb_mystere_mguess.c
        tp4/Rendu.LECUYER/bases.c
        tp4/Rendu.LECUYER/deplacement.c
        tp4/Rendu.LECUYER/des.c
        tp4/Rendu.LECUYER/eratosthene.c
        tp4/Rendu.LECUYER/manip_tabs.c
        tp4/Rendu.LECUYER/matrice2.c
        tp4/Rendu.LECUYER/matrices1.c
        tp4/Rendu.LECUYER/matrices2.c
        tp4/Rendu.LECUYER/tri_volee.c
        tp4/Rendu.LECUYER/triangle_pascal.c
        tp4/bases.c
        tp4/deplacement.c
        tp4/des.c
        tp4/eratosthene.c
        tp4/manip_tabs.c
        tp4/matrice2.c
        tp4/matrices1.c
        tp4/matrices2.c
        tp4/tri_volee.c
        tp4/triangle_pascal.c
        tp5/mesfcts_str.c
        tp7/lecture.c
        tp7/lecture.h
        tp8/chomp/chomp.c
        tp8/chomp/types.h
        tp8/rectangle.c
        tp8/rectangle_clic.c tp7/main.c)
